trunk/Archive/4de57f777a087ec957e1a0d1783086f4-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:12:22: error: 'std::istream' has not been declared
     void handle(std::istream&, std::ostream&);
                      ^
main.cpp:12:37: error: 'std::ostream' has not been declared
     void handle(std::istream&, std::ostream&);
                                     ^
main.cpp:14:33: error: 'std::istream' has not been declared
     void handle_body(POST, std::istream&, std::ostream&);
                                 ^
main.cpp:14:48: error: 'std::ostream' has not been declared
     void handle_body(POST, std::istream&, std::ostream&);
                                                ^
main.cpp:16:32: error: 'std::istream' has not been declared
     void handle_body(GET, std::istream&, std::ostream&);
                                ^
main.cpp:16:47: error: 'std::ostream' has not been declared
     void handle_body(GET, std::istream&, std::ostream&);
                                               ^
